--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,10 @@
-*~
+node_modules/
+
 .idea
-/.DS_Store
+.lein-*
+.nrepl-*
 .DS_Store
-/classes
-/lib
-/target
-closure
-/core.js
-/coreadvanced.js
-/coresimple.js
-/out
-*out
-.lein*
-/pom.xml
-*.iml
-.repl*
-*.swp
-*.zip
-clojurescript_release_*
-closure-release-*
-.lein-repl-history
-.nrepl-port
-.nrepl-repl-history
-builds
-.cljs*
-node_modules
-nashorn_code_cache
-src/main/cljs/cljs/core.aot.js
-src/main/cljs/cljs/core.aot.js.map
-src/main/cljs/cljs/core.cljs.cache.aot.edn
-src/main/cljs/cljs/core.cljs.cache.aot.json
+
 .node_repl
 package.json
 package-lock.json
@@ -38,3 +13,5 @@ resources/brepl_client.js
 
 .lsp
 .clj-kondo
+.shadow-cljs
+dist/cljs-runtime
