--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0-beta.3",
   "description": "Fork to use athens parser as standalone lib.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "shadow-cljs": "2.19.8"
   }
